--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -33,7 +33,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:image" content="https://bayzamusic.com/images/releases/{{ release.year }}/{{ release.cover }}.jpg"/>
+    <meta name="twitter:image" content="http://bayzamusic.com/images/releases/{{ release.year }}/{{ release.cover }}.jpg"/>
     <meta name="twitter:title" content="{{ release.artists }} - {{ release.title }}">
     <meta name="twitter:description" content="{{ release.description }}">
     <meta name="twitter:site" content="@bayzamusic"/>
@@ -45,7 +45,7 @@
     <link rel="stylesheet" href="/css/fontello-embedded.css">
     <link rel="stylesheet" href="/css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
+    <link rel="canonical" href="http://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
     <script type="application/ld+json">
       {   
         "@context" : "http://schema.org",
