--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,13 +11,11 @@
     <meta name="description" content="Bayza is a Panamanian musician and producer."/>
     
     <!-- Protocolo Open Graph -->
-    <meta property="og:url" content="http://bayzamusic.com"/>
-    <meta property="og:secure_url" content="http://bayzamusic.com"/>
+    <meta property="og:url" content="https://bayzamusic.com"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza"/>
     <meta property="og:site_name" content="Bayza"/>
-    <meta property="og:image" content="http://bayzamusic.com/images/logomt-600x400.jpg"/>
-    <meta property="og:image_secure" content="http://bayzamusic.com/images/logomt-600x400.jpg"/>
+    <meta property="og:image" content="https://bayzamusic.com/images/logomt-600x400.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
     <meta property="og:image:width" content="300"/>
     <meta property="og:image:height" content="200"/>
