--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -253,7 +253,7 @@
         <div class="my-3 font-weight-light text-justify">
           <p>
             Ahmed Rangel, also known as 
-            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=J2gUIe3FQJuz5hsK2olHoQ" target="_blank" title="Bayza Spotify">Bayza</a></b>, is currently a Deep House Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
+            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=J2gUIe3FQJuz5hsK2olHoQ" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a Electronic/Dance Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
             Born in June 1998 (22 years old) and uses 
             <b><a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio">FL Studio</a></b> for his music production, he started making music in 2012 but didn't released any track until 2014.
           </p>
