--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -168,6 +168,15 @@
                 <div class="col-6 pr-5 py-4 text-center my-auto">
                   <span class="btn btn-outline-light">Buy</span>
                 </div>
+              </a>{% endif %}{% if page.tiktok %}
+              <!-- tiktok -->
+              <a class="row links text-white" href="{{ page.tiktok }}" target="_blank" title="Use Sound on TikTok">
+                <div class="col-6 pl-5 py-4">
+                  <img class="mx-auto d-block" src="/images/tiktok.png" width="100%"/>
+                </div>
+                <div class="col-6 pr-5 py-4 text-center my-auto">
+                  <span class="btn btn-outline-light">Use Sound</span>
+                </div>
               </a>{% endif %}{% if page.download %}
               <!-- free download -->
               <div class="col-lg-12 mt-3">
