--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -98,12 +98,12 @@
                 </div>
               </a>{% endif %}{% if page.youtube %}
               <!-- youtube -->
-              <a class="row links text-white" href="{{ page.youtube }}" target="_blank" title="Stream on Youtube">
+              <a class="row links text-white" href="{{ page.youtube }}" target="_blank" title="Play on Youtube">
                 <div class="col-6 pl-5 py-4"> 
                   <img class="mx-auto d-block" src="/images/youtube.png" width="100%"/>
                 </div>
                 <div class="col-6 pr-5 py-4 text-center my-auto">
-                  <span class="btn btn-outline-light">Stream</span>
+                  <span class="btn btn-outline-light">Play</span>
                 </div>
               </a>{% endif %}{% if page.beatport %}
               <!-- beatport -->
