--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -147,21 +147,6 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container" >
-                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/make-believe-remix.jpg">
-                  <div class="centered">
-                    <h4>Upcoming</h4>
-                    <small><h5>TBA</h5></small>
-                  </div>
-                </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Make Believe (Bayza Remix)</p></small></h5>
-                  <small><p class="mb-4">Eress</p></small>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <div class="upcoming-container" >
                   <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/hold-on-to-me.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
@@ -170,6 +155,21 @@
                 </div>
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">Hold On To Me</p></small></h5>
                   <small><p class="mb-4">Dimatis & Bayza</p></small>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <div class="upcoming-container" >
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/make-believe-remix.jpg">
+                  <div class="centered">
+                    <h4>Upcoming</h4>
+                    <small><h5>Aug 1, 2020</h5></small>
+                  </div>
+                </div>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Make Believe (Bayza Remix)</p></small></h5>
+                  <small><p class="mb-4">Eress</p></small>
               </div>
             </div>
           </div>
