--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -20,7 +20,7 @@
     <meta property="og:image:height" content="300"/>
     <meta property="og:description" content="{{ page.artists }}"/>
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image" content="{{ page.image_secure }}"/>
     <meta name="twitter:title" content="{{ page.title }}"/>
     <meta name="twitter:description" content="{{ page.artists }}"/>
