--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -162,14 +162,14 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container" >
-                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/make-believe-remix.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/solace.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>Aug 1, 2020</h5></small>
+                    <small><h5>Aug 28, 2020</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Make Believe (Bayza Remix)</p></small></h5>
-                  <small><p class="mb-4">Eress</p></small>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Solace</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small>
               </div>
             </div>
           </div>
