--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -31,6 +31,7 @@
     <!-- Recursos -->
     <link rel="icon" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" href="/images/logomt.jpg"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/fontello-embedded.css">
     <link rel="stylesheet" href="/css/bayza.css"/>
@@ -120,7 +121,7 @@
     </nav>
     <section id="dark" class="cabecera text-center text-dark py-5">
       <div class="container py-5 my-5">
-        <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
+        <h1 class="display-4 mt-3 text-uppercase" data-aos="fade-left">Bayza</h1>
         <h4 class="my-3 font-weight-light">Panamanian musician and producer</h4>
         <div class="row">
           <div class="col-12 mb-2 justify-content-center">
