--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,9 +1,13 @@
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
 <script src="https://apis.google.com/js/platform.js"></script>
 <script src="/js/jquery-3.4.1.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
+<script>
+    AOS.init();
+</script>
 <script>
   $('body').css('padding-top', 0 + 'px')
   if ($('.smart-scroll').length > 0) { // check if element exists
