--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -142,7 +142,7 @@
 
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary py-5 text-center">
-        <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
+        <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
         <div class="row my-4 text-left">
           <div class="col-6 col-lg-3">
             <div class="item">
