--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -140,7 +140,7 @@
       </div>
     </section>
 
-    <section id="latest releases" class="bg-darkest">
+    <section id="latest releases" class="bg-darkest" data-aos="zoom-in">
       <div class="container text-secondary py-5 text-center">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
         <div class="row my-4 text-left">
