--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -165,10 +165,10 @@
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
                   <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
-                  <h5 class="mb-0" style="font-size: 1.25rem;"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
+                  <h5 data-aos="fade-left" class="mb-0" style="font-size: 1.25rem;"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
                 </a>
-                <small><p class="mb-0">{{ item.artists }}</p></small>
-                <small><p class="mb-4">{{ item.date | date: "%b %-d, %Y" }}</p></small>
+                <small><p class="mb-0" data-aos="fade-left">{{ item.artists }}</p></small>
+                <small><p class="mb-4" data-aos="fade-right">{{ item.date | date: "%b %-d, %Y" }}</p></small>
               </div>
             </div>
           </div>{% if forloop.index0 == 10 %}{% break %}{% endif %}{% endfor %}
