--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -31,7 +31,7 @@
     <!-- Recursos -->
     <link rel="icon" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" href="/images/logomt.jpg"/>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/fontello-embedded.css">
     <link rel="stylesheet" href="/css/bayza.css"/>
@@ -121,8 +121,8 @@
     </nav>
     <section id="dark" class="cabecera text-center text-dark py-5">
       <div class="container py-5 my-5">
-        <h1 class="display-4 mt-3 text-uppercase" data-aos="fade-left">Bayza</h1>
-        <h4 class="my-3 font-weight-light" data-aos="fade-right">Panamanian musician and producer</h4>
+        <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
+        <h4 class="my-3 font-weight-light">Panamanian musician and producer</h4>
         <div class="row">
           <div class="col-12 mb-2 justify-content-center">
             <span>
@@ -142,7 +142,7 @@
 
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary py-5 text-center">
-        <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
+        <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
         <div class="row my-4 text-left">
           <div class="col-6 col-lg-3">
             <div class="item">
@@ -164,11 +164,11 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
-                  <h5 data-aos="fade-left" class="mb-0" style="font-size: 1.25rem;"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
+                  <h5 class="mb-0" style="font-size: 1.25rem;"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
                 </a>
-                <small><p class="mb-0" data-aos="fade-left">{{ item.artists }}</p></small>
-                <small><p class="mb-4" data-aos="fade-right">{{ item.date | date: "%b %-d, %Y" }}</p></small>
+                <small><p class="mb-0">{{ item.artists }}</p></small>
+                <small><p class="mb-4">{{ item.date | date: "%b %-d, %Y" }}</p></small>
               </div>
             </div>
           </div>{% if forloop.index0 == 10 %}{% break %}{% endif %}{% endfor %}
