--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,6 +6,9 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
 <script>
+    AOS.init();
+</script>
+<script>
   $('body').css('padding-top', 0 + 'px')
   if ($('.smart-scroll').length > 0) { // check if element exists
       var last_scroll_top = 0;
