--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -160,7 +160,7 @@
             </div>
           </div>
           {% for item in sorted %}
-          <div class="col-6 col-lg-3">
+          <div class="col-6 col-lg-3" style="overflow-x: hidden;">
             <div class="item">
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
