--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -141,7 +141,7 @@
     </section>
 
     <section id="latest releases" class="bg-darkest">
-      <div class="container text-secondary py-5 text-center">
+      <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
         <div class="row my-4 text-left">
           <div class="col-6 col-lg-3">
@@ -160,7 +160,7 @@
             </div>
           </div>
           {% for item in sorted %}
-          <div class="col-6 col-lg-3" style="overflow-x: hidden;">
+          <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
