--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -142,20 +142,20 @@
 
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
-        <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
+        <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
         <div class="row my-4 text-left">
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
-                <div class="upcoming-container" >
+                <div class="upcoming-container" data-aos="zoom-in">
                   <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/hold-on-to-me.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
                     <small><h5>Sep 25, 2020</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Hold On To Me</p></small></h5>
-                  <small><p class="mb-4">Dimatis & Bayza</p></small>
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Hold On To Me</p></small></h5>
+                  <small><p class="mb-4" data-aos="fade-left">Dimatis & Bayza</p></small>
               </div>
             </div>
           </div>
