--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1 fixed-top">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1 fixed-top smart-scroll">
     <a class="navbar-brand" href="/"><i class="icon-bayza"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
