--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -173,7 +173,7 @@
             </div>
           </div>{% if forloop.index0 == 10 %}{% break %}{% endif %}{% endfor %}
         </div>  
-        <a class="btn btn-outline-releases px-4 py-1" href="/releases">See more</a>
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases" data-aos="flip-left">See more</a>
       </div>
     </section>
 
