--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -178,9 +178,9 @@
     </section>
 
     <section id="music" class="bg-dark text-secondary text-center py-5">
-      <div class="container">
-        <h3 class="mt-3 text-uppercase text-white">Music</h3>
-        <h4 class="font-weight-light">Follow my music</h4>
+      <div class="container" style="overflow-x: hidden;">
+        <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Music</h3>
+        <h4 class="font-weight-light" data-aos="fade-left">Follow my music</h4>
         <div class="row text-white">
           <div class="col-lg-4">
             <div class="m-3 bg-darkest rounded-lg py-3">
