--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -182,7 +182,7 @@
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Music</h3>
         <h4 class="font-weight-light" data-aos="fade-left">Follow my music</h4>
         <div class="row text-white">
-          <div class="col-lg-4">
+          <div class="col-lg-4" data-aos="flip-down">
             <div class="m-3 bg-darkest rounded-lg py-3">
               <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=v8o8YvcnTQOEjbBcEQuxKw" title="Bayza's Spotify">
@@ -204,7 +204,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4" data-aos="flip-up">
             <div class="m-3 bg-darkest rounded-lg py-3">
               <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://soundcloud.com/bayza" title="Bayza's SoundCloud">
@@ -222,7 +222,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4" data-aos="flip-down">
             <div class="m-3 bg-darkest rounded-lg py-3">
               <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://youtube.com/bayza" title="Bayza's YouTube">
