--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -204,7 +204,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4" data-aos="flip-left">
+          <div class="col-lg-4" data-aos="flip-down">
             <div class="m-3 bg-darkest rounded-lg py-3">
               <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://soundcloud.com/bayza" title="Bayza's SoundCloud">
