--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -119,7 +119,7 @@
         </ul>
       </div>  
     </nav>
-    <section id="dark cabecera" class="cabecera text-center text-dark py-5">
+    <section id="dark" class="cabecera text-center text-dark py-5">
       <div class="container py-5 my-5">
         <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
         <h4 class="my-3 font-weight-light">Panamanian musician and producer</h4>
