--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -121,16 +121,16 @@
     </nav>
     <section id="dark" class="cabecera text-center text-dark py-5">
       <div class="container py-5 my-5">
-        <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
-        <h4 class="my-3 font-weight-light">Panamanian musician and producer</h4>
+        <h1 class="display-4 mt-3 text-uppercase" data-aos="zoom-in">Bayza</h1>
+        <h4 class="my-3 font-weight-light" data-aos="zoom-in">Panamanian musician and producer</h4>
         <div class="row">
           <div class="col-12 mb-2 justify-content-center">
-            <span>
+            <span data-aos="flip-left">
               <a href="#music" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
                 <h5 class="font-weight-light m-0 text-uppercase">Music</h5>
               </a>
             </span>
-            <span>
+            <span data-aos="flip-left">
               <a href="#contact" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
                 <h5 class="font-weight-light m-0 text-uppercase">Contact</h5>
               </a>
