--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -125,16 +125,20 @@
         <h4 class="my-3 font-weight-light" data-aos="zoom-in">Panamanian musician and producer</h4>
         <div class="row">
           <div class="col-12 mb-2 justify-content-center">
-            <span data-aos="flip-left">
-              <a href="#music" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
-                <h5 class="font-weight-light m-0 text-uppercase">Music</h5>
-              </a>
-            </span>
-            <span data-aos="flip-left">
-              <a href="#contact" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
-                <h5 class="font-weight-light m-0 text-uppercase">Contact</h5>
-              </a>
-            </span>
+            <div data-aos="flip-left">
+              <span>
+                <a href="#music" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
+                  <h5 class="font-weight-light m-0 text-uppercase">Music</h5>
+                </a>
+              </span>
+            </div>
+            <div data-aos="flip-left">
+              <span>
+                <a href="#contact" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
+                  <h5 class="font-weight-light m-0 text-uppercase">Contact</h5>
+                </a>
+              </span>
+            </div>
           </div>
         </div>
       </div>
