--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -120,25 +120,21 @@
       </div>  
     </nav>
     <section id="dark" class="cabecera text-center text-dark py-5">
-      <div class="container py-5 my-5">
+      <div class="container pt-4 cabecera-adjust">
         <h1 class="display-4 mt-3 text-uppercase" data-aos="zoom-in">Bayza</h1>
         <h4 class="my-3 font-weight-light" data-aos="zoom-in">Panamanian musician and producer</h4>
         <div class="row">
           <div class="col-12 mb-2 justify-content-center">
-            <div data-aos="flip-left">
-              <span>
-                <a href="#music" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
-                  <h5 class="font-weight-light m-0 text-uppercase">Music</h5>
-                </a>
-              </span>
-            </div>
-            <div data-aos="flip-left">
-              <span>
-                <a href="#contact" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
-                  <h5 class="font-weight-light m-0 text-uppercase">Contact</h5>
-                </a>
-              </span>
-            </div>
+            <span>
+              <a data-aos="flip-right" href="#music" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
+                <h5 class="font-weight-light m-0 text-uppercase">Music</h5>
+              </a>
+            </span>
+            <span>
+              <a data-aos="flip-right" href="#contact" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
+                <h5 class="font-weight-light m-0 text-uppercase">Contact</h5>
+              </a>
+            </span>
           </div>
         </div>
       </div>
