--- a/css/bayza.css
+++ b/css/bayza.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 .cabecera {
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.16)),url(../images/ahmed_bannerweb3.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16)),url(../images/ahmed_bannerweb3.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -328,5 +328,18 @@ b a:hover {
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
+    }
+}
+
+.cabecera-adjust{
+    padding-bottom: .5rem;
+    margin-bottom: 9rem;
+    margin-top: 9rem;
+}
+@media only screen and (max-width: 767px){
+    .cabecera-adjust{
+        padding-bottom: 0;
+        margin-bottom: 0;
+        margin-top: 0;
     }
 }
