--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -120,7 +120,7 @@
       </div>  
     </nav>
     <section id="dark" class="cabecera text-center text-dark py-5">
-      <div class="container pt-4 cabecera-adjust">
+      <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
         <h1 class="display-4 mt-3 text-uppercase" data-aos="zoom-in">Bayza</h1>
         <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian musician and producer</h4>
         <div class="row">
