--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,7 +4,7 @@
     <title>Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
-    <meta name="theme-color" content="#282828"/>
+    <meta name="theme-color" content="#1d1d1d"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
     <meta name="keywords" content="bayza, dj, producer, panama, music, EDM, dance, musician, artist, ahmed" />
