--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -13,7 +13,7 @@
     <title>{{ release.artists }} - {{ release.title }} | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
-    <meta name="theme-color" content="#282828"/>
+    <meta name="theme-color" content="#1d1d1d"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
     <meta name="keywords" content="{{ release.title }}, {{ release.genre }}, {{ release.year }}, electro, EDM, music" />
