--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -3,7 +3,7 @@
     <title>Releases | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
-    <meta name="theme-color" content="#282828"/>
+    <meta name="theme-color" content="#1d1d1d"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
     <meta name="keywords" content="releases, bounce, music, EDM, dance, deep house, oriental" />
