--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -40,16 +40,16 @@
   </body>
     {% include navbar.html %}
     <section id="releases" class="bg-darkest-est">
-      <div class="container text-secondary text-center py-5">
-        <h3 class="mt-5 text-uppercase text-white">Official Releases</h3>
-        <h4 class="font-weight-light">by year</h4>
+      <div class="container text-secondary text-center py-5" style="overflow-x: hidden;"">
+        <h3 class="mt-5 text-uppercase text-white" data-aos="fade-right">Official Releases</h3>
+        <h4 class="font-weight-light" data-aos="fade-left">by year</h4>
         <div class="row my-4">
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <a href="/releases/2020">
-                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020">
-                  <h5 class="mb-0"><small><p class="mt-2">2020 Releases</p></small></h5>
+                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020">
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2020 Releases</p></small></h5>
                 </a>
               </div>
             </div>
@@ -58,8 +58,8 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2019">
-                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019">
-                  <h5 class="mb-0"><small><p class="mt-2">2019 Releases</p></small></h5>
+                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019">
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2019 Releases</p></small></h5>
                 </a>
               </div>
             </div>
@@ -68,14 +68,14 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2018">
-                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2018bayzacom.jpg" alt="Bayza 2018">
-                  <h5 class="mb-0"><small><p class="mt-2">2018 Releases</p></small></h5>
+                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2018bayzacom.jpg" alt="Bayza 2018">
+                  <h5 class="mb-0"><small><p class="mt-2" data-aos="fade-left">2018 Releases</p></small></h5>
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all">See all releases</a>
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all" data-aos="flip-left">See all releases</a>
       </div>
     </section>
     <section id="releases" class="bg-darkest">
@@ -87,8 +87,8 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2020-bootlegs">
-                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020-bootlegsbayzacom.jpg" alt="Bayza 2020 Bootlegs">
-                  <h5 class="mb-0"><small><p class="mt-2">2020 Bootlegs/Remixes</p></small></h5>
+                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020-bootlegsbayzacom.jpg" alt="Bayza 2020 Bootlegs">
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2020 Bootlegs/Remixes</p></small></h5>
                 </a>
               </div>
             </div>
@@ -97,14 +97,14 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/2019-bootlegs">
-                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019-bootlegsbayzacom.jpg" alt="Bayza 2019 Bootlegs">
-                  <h5 class="mb-0"><small><p class="mt-2">2019 Bootlegs/Remixes</p></small></h5>
+                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019-bootlegsbayzacom.jpg" alt="Bayza 2019 Bootlegs">
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2019 Bootlegs/Remixes</p></small></h5>
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all-bootlegs">See all bootlegs</a>
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all-bootlegs" data-aos="flip-left">See all bootlegs</a>
       </div>
     </section>
 {% include footer.html %}
