--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -41,7 +41,7 @@
   </body>
     {% include navbar.html %}
     <section id="releases" class="bg-darkest-est">
-      <div class="container text-secondary text-center py-5" style="overflow-x: hidden;"">
+      <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
         <h3 class="mt-5 text-uppercase text-white" data-aos="fade-right">Official Releases</h3>
         <h4 class="font-weight-light" data-aos="fade-left">by year</h4>
         <div class="row my-4">
@@ -80,7 +80,7 @@
       </div>
     </section>
     <section id="releases" class="bg-darkest">
-      <div class="container text-secondary text-center py-5">
+      <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">Bootlegs</h3>
         <h4 class="font-weight-light">*Special</h4>
         <div class="row my-4">
