--- a/css/bayza.css
+++ b/css/bayza.css
@@ -325,7 +325,7 @@ b a:hover {
 
 @media only screen and (max-width: 767px){
     .cabecera{
-        background: linear-gradient(rgb(137 131 137), rgb(137 131 137)),url(../images/ahmed_bannerweb3.jpg);
+        background: linear-gradient(rgb(0, 0, 0, 0.16), rgb(0, 0, 0, 0.16)),url(../images/ahmed_bannerweb3-mobile.jpg);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
