--- a/css/bayza.css
+++ b/css/bayza.css
@@ -21,6 +21,7 @@ h1 {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+
 }
 
 .text-dark {
@@ -229,7 +230,7 @@ footer .instagram a:hover {
     background: #151515!important
 }
 
-a img{
+a img, .img-fx{
     -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
     -ms-user-select: none;      /* IE 10+ */
@@ -241,7 +242,7 @@ a img{
     -ms-user-select: none;
 }
 
-a img:hover {
+a .img-fx:hover {
     filter: contrast(105%) brightness(120%) drop-shadow(7px 7px 5px #00000088);
 }
 
@@ -334,13 +335,13 @@ b a:hover {
 
 .cabecera-adjust{
     padding-bottom: .5rem;
-    margin-bottom: 9rem;
-    margin-top: 9rem;
+    margin-bottom: 6rem;
+    margin-top: 6rem;
 }
 @media only screen and (max-width: 767px){
     .cabecera-adjust{
         padding-bottom: 0;
         margin-bottom: 0;
-        margin-top: 0;
+        margin-top: 4rem;
     }
 }
