--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -138,7 +138,7 @@
           </div>
           <div class="col-12 col-md-5 row mt-5 text-right">
             <div class="col-12 col-md-9 d-none d-md-block">
-              <h5 data-aos="zoom-in">Latest Official Release:</h1>
+              <h5 data-aos="zoom-in">Latest Release:</h1>
               <a class="text-dark" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
               <h5 class="font-weight-light" data-aos="fade-left">{{ releases.last.artists }} - {{ releases.last.title }} <i class="fas fa-external-link-alt"></i></h5></a>
               <small><p class="mb-4" data-aos="fade-right">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
