--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -144,7 +144,7 @@
               <small><p class="mb-4" data-aos="fade-right">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
             <div class="col-12 col-md-3 d-none d-md-block">
-              <img width="100px" height=" 100px" data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="{{ releases.last.artists }} - {{ releases.last.title }}">
+              <img width="100px" height=" 100px" data-aos="zoom-in" class="scale-on-hover" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="{{ releases.last.artists }} - {{ releases.last.title }}">
             </div>
             
             </a>
