--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -123,18 +123,15 @@
     <section id="dark" class="cabecera text-dark py-5">
       <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
         <div class="row">
-          <div class="col-12 col-md-7 text-center">
+          <div class="col-12 col-md-7 text-left d-none d-md-block">
             <h1 class="display-4 mt-3 text-uppercase" data-aos="zoom-in">Bayza</h1>
-            <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian musician and producer</h4>
-            <div class="row">
-              <div class="col-12 mb-2 justify-content-center">
-                <span>
-                  <a data-aos="flip-right" href="#contact" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
-                    <h5 class="font-weight-light m-0 text-uppercase">Contact</h5>
-                  </a>
-                </span>
-              </div>
-            </div>
+            <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian music producer</h4>
+            <small><p class="mb-4" data-aos="fade-right"><span>Contact: </span><a class="text-dark" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
+          </div>
+          <div class="col-12 col-md-7 text-center d-block d-md-none">
+            <h1 class="display-4 mt-3 text-uppercase  " data-aos="zoom-in">Bayza</h1>
+            <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian music producer</h4>
+            <small><p class="mb-4" data-aos="fade-right"><span>Contact: </span><a class="text-dark" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
           </div>
           <div class="col-12 col-md-5 row mt-5 text-right">
             <div class="col-12 col-md-9 d-none d-md-block">
