bootstrap renovation & banner changes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -123,17 +123,22 @@
     <section id="dark" class="cabecera text-dark py-5">
       <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
         <div class="row">
-          <div class="col-12 col-md-7 text-left d-none d-md-block">
+          <div class="col-12 col-md-4 text-left d-none d-md-block">
             <h1 class="display-4 mt-3 text-uppercase" data-aos="zoom-in">Bayza</h1>
             <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian music producer</h4>
             <small><p class="mb-4" data-aos="fade-right"><span>Contact: </span><a class="text-dark" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
           </div>
+          <div class="col-12 col-md-4 d-none d-md-block">
+            <div class="portfolio-block block-intro">
+              <div class="avatar border border-1" style="background-image:url('images/bayza-avatar.jpg');"></div>
+            </div>
+          </div>
           <div class="col-12 col-md-7 text-center d-block d-md-none">
-            <h1 class="display-4 mt-3 text-uppercase  " data-aos="zoom-in">Bayza</h1>
+            <h1 class="display-4 mt-3 text-uppercase " data-aos="zoom-in">Bayza</h1>
             <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian music producer</h4>
             <small><p class="mb-4" data-aos="fade-right"><span>Contact: </span><a class="text-dark" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
           </div>
-          <div class="col-12 col-md-5 row mt-5 text-right">
+          <div class="col-12 col-md-4 row mt-5 text-right">
             <div class="col-12 col-md-9 d-none d-md-block">
               <h5 data-aos="zoom-in">Latest Release:</h1>
               <a class="text-dark" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
