--- a/css/bayza.css
+++ b/css/bayza.css
@@ -242,9 +242,10 @@ a img, .img-fx{
     -ms-user-select: none;
 }
 
-a .img-fx:hover {
+.img-fx:hover {
     filter: contrast(105%) brightness(120%) drop-shadow(7px 7px 5px #00000088);
 }
+
 
 b a {
     color: #fff;
