--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -144,7 +144,7 @@
               <a class="text-dark" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
               <small><h5 class="font-weight-light" data-aos="fade-left">{{ releases.last.title }} <i class="fas fa-external-link-alt"></i></h5></a></small>
               <small class="mb-4" data-aos="fade-right">by {{ releases.last.artists }}</small>
-              <small><p class="mb-4" data-aos="fade-right">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
+              <small><p class="mb-4 mt-1" data-aos="fade-right">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
             <div class="col-12 col-md-5 d-none d-md-block">
               <img data-aos="zoom-in" widht="100px" height="100px" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="{{ releases.last.artists }} - {{ releases.last.title }}">
