--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -141,7 +141,7 @@
           <div class="col-12 col-md-4 row mt-5 text-right">
             <div class="col-12 col-md-7 d-none d-md-block">
               <h5 data-aos="zoom-in">Latest Release:</h1>
-              <a class="text-dark" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
+              <a target="_blank" class="text-dark" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
               <small><h5 class="font-weight-light" data-aos="fade-left">{{ releases.last.title }} <i class="fas fa-external-link-alt"></i></h5></a></small>
               <small class="mb-4" data-aos="fade-right">by {{ releases.last.artists }}</small>
               <small><p class="mb-4 mt-1" data-aos="fade-right">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
