--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -146,8 +146,8 @@
               <div data-aos="fade-left"><small class="mb-4" >by {{ releases.last.artists }}</small></div>
               <small><p class="mb-4 mt-1" data-aos="fade-right">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
-            <div class="col-12 col-md-5 d-none d-md-block">
-              <img data-aos="zoom-in" widht="100px" height="100px" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="{{ releases.last.artists }} - {{ releases.last.title }}">
+            <div class="col-12 col-md-5 d-none d-md-block portfolio-block block-intro">
+              <div class="avatar" data-aos="zoom-in" style="background-image:url('https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg'); width:100px; height:100px; border-radius:0px"></div>
             </div>
             
             </a>
